@@ -1,9 +1,7 @@
 AUX anope.confd 319 RMD160 0c5d646bfa55a17a32b9438c79abae6fce8a3edc SHA1 e19f46901bf4c79d79c8dc55cb84973c9d136730 SHA256 c2a9351942865763e6fdeaa9c37be28efb23f788dc9041439ca80b7d60d1c4f4
 AUX anope.initd 575 RMD160 59f2759c0b3918f4d510c4f5f738dc40e079a511 SHA1 4669ee3d2eec9251b763438e0627f7152b5afc5a SHA256 bf510cb3eb2c9839630f834bc2730c6b4d3da9a7d9a671b02eefefad5f39ed1d
 AUX pid-patch.diff 450 RMD160 d18ab894895db105c91d0d1e24af2aff79f1bd13 SHA1 87be4165d15dbc6bfc972972d588e127ab492135 SHA256 cd3f266cd236e6a5bb7d15b502631e8992289455f7e308d94ac14e3b13314dc5
-DIST anope-1.8.0-rc1.tar.gz 1559311 RMD160 da43a7cc3e89a524f6d6aeb5c7725fcedc58cf77 SHA1 ead5a58c3d17345cf0647544f8f7d58720c51658 SHA256 c382504a3e967ec4cb1cac25478017e6edbc3fd801303e85b8f222f847a7601a
 DIST anope-1.8.0.tar.gz 1559446 RMD160 fc54c552de5bcfc1d3b620c442e4f5a7081734a3 SHA1 0e7106fd65c7dec4187fae26ac1ca6375fe694f1 SHA256 e0c03d2590d3da273e4fb2bb5ec8056f85045979f86e6224bfe895f16a1fd41d
 EBUILD anope-1.8.0.ebuild 4185 RMD160 1690dc67f9fbae6909642926f1224d7e87be2463 SHA1 acebb0a33a22eddd8940c318e38665ad1a29ee10 SHA256 06ee0673a80a69a13e1025f55159f40dcf5044944661dcac6dda00b596d0ab1d
-EBUILD anope-1.8.0_rc1.ebuild 4192 RMD160 636b579e6421a13805947cb2f23a2dbecc076cfa SHA1 f52d50753350c01fab728c7065b2b93a72314459 SHA256 26b03a39fb25095274b4c4f74202fffbc52325791109debf24f6bbfc3f7b1df8
-MISC ChangeLog 2208 RMD160 43154cf1166541bceb8f777132d01d0677247406 SHA1 198346a95dc1861c741a2ac8d4fe7c66a3be331d SHA256 32a331de2fdc4246fa90953b38afbcf6ed0bd911b0bb8d4cdf0a9ab1a3735c97
+MISC ChangeLog 2338 RMD160 7ed1e3a6a43b93f71836c21f000ac5fcf73027dd SHA1 f00b4e75c493e0a1c8166e7fb1ac3a3e4affe603 SHA256 807745c4ca0fbc51e8a47d8958078d06e6f4201b46ff9b0152a09d09735529d6
 MISC metadata.xml 322 RMD160 4ac585786fcb58a92771bd8ee9f71f4738e64798 SHA1 133d8c37c5ab6d5366948f3de3e18c5a7a230ed4 SHA256 4240b9effe8d7796234c47e4f4af9ef4250bcfcafa9ec09e4b6a4a503de10b71
