@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/anope
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-irc/anope/ChangeLog,v 1.15 2009/06/27 11:04:34 patrick Exp $
+
+  16 Feb 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> -anope-1.8.0_rc1.ebuild:
+  Drop anope-1.8.0_rc1
 
 *anope-1.8.0 (27 Jun 2009)
 
